css changes to fix home page on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,7 @@
 /* All */
 header {
     width: 100% !important;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    margin-left: 0;
     margin-left: calc(-50vw + 50%);
     padding-left: 1rem;
     padding-right: 1rem;
@@ -55,6 +52,17 @@ body.home_page {
     animation: 
         candleFlicker 6s infinite,
         slowZoom 12s ease-in forwards;
+    }
+
+@media (max-width: 768px) {
+    .tagline {
+        font-size: 48px;
+    }
+    
+    .tagline_box {
+        width: 100%;
+        padding: 0 20px;
+    }
     }
 
 @keyframes candleFlicker {
